--- a/microservice-config/src/main/resources/configurations/msvc-course.yml
+++ b/microservice-config/src/main/resources/configurations/msvc-course.yml
@@ -5,15 +5,15 @@ spring:
   application:
     name: msvc-course
   datasource:
-    driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/coursesDb
-    username: postgres
-    password: 150919
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3307/coursesdb
+    username: root
+    #password: 150919
   jpa:
     hibernate:
       ddl-auto: create-drop
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQLDialect
 
 eureka:
   instance:
