--- a/microservice-config/src/main/resources/configurations/msvc-student.yml
+++ b/microservice-config/src/main/resources/configurations/msvc-student.yml
@@ -6,9 +6,9 @@ spring:
     name: msvc-student
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/studentDb
+    url: jdbc:mysql://127.0.0.1:3307/studentDb
     username: root
-    password: 150919
+   # password: 150919
   jpa:
     hibernate:
       ddl-auto: create-drop
