falta agregar los applications-docker y terminar el dokcer-compose

--- a/microservice-config/src/main/resources/configurations/msvc-student.yml
+++ b/microservice-config/src/main/resources/configurations/msvc-student.yml
@@ -11,7 +11,7 @@ spring:
    # password: 150919
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     database: mysql
     database-platform: org.hibernate.dialect.MySQLDialect
   activemq:
