--- a/microservice-course/src/main/resources/application.yml
+++ b/microservice-course/src/main/resources/application.yml
@@ -3,3 +3,13 @@ spring:
     name: msvc-course
   config:
     import: optional:configserver:http://localhost:8888
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3307/coursesdb
+    username: root
+    #password: 150919
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQLDialect
