--- a/microservice-aws/src/main/resources/application.yml
+++ b/microservice-aws/src/main/resources/application.yml
@@ -3,3 +3,30 @@ spring:
     name: msvc-aws
   config:
     import: optional:configserver:http://localhost:8888
+  destination:
+    folder: src/main/resources/static/
+  activemq:
+    #in-memory: true
+    #broker-url: vm://localhost?broker.persistent=false
+    #broker-url: tcp://172.31.94.21:51616
+    broker-url: tcp://localhost:61616
+    user: admin
+    password: admin
+    in-memory: false
+
+aws:
+  region: us-east-1
+  access:
+    key: xxx
+  secret:
+    key: xxx
+
+messaging:
+  consumer-id: ${spring.application.name}
+  consumers:
+    queues:
+      msvc-aws-s3: VirtualTopic.msvc.aws.s3
+  producers:
+    topics:
+      msvc-student: VirtualTopic.msvc.student
+      msvc-aws-s3: VirtualTopic.msvc.aws.s3
