--- a/microservice-course/configurations/application-docker.yml
+++ b/microservice-course/configurations/application-docker.yml
@@ -12,3 +12,5 @@ spring:
     client:
       serviceUrl:
         defaultZone: http://eureka-server:8761/eureka
+  config:
+    import: optional:configserver:http://config-server:8888
