--- a/microservice-course/Dockerfile
+++ b/microservice-course/Dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copiar el archivo JAR generado
-COPY target/microservice-course.jar app.jar
+COPY target/microservice-course-0.0.1-SNAPSHOT.jar app.jar
 
 # Exponer el puerto del servicio
 EXPOSE 9090
