--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.8'
 
+networks:
+  mynetwork:
+    driver: bridge
 services:
   config:
     build:
@@ -9,8 +12,8 @@ services:
       - "8888:8888"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
-    volumes:
-      - ./configurations:/configurations
+    networks:
+      - mynetwork
 
 
   eureka:
@@ -21,8 +24,11 @@ services:
       - "8761:8761"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_CONFIG_IMPORT=optional:configserver:http://config-server:8888
     depends_on:
       - config
+    networks:
+      - mynetwork
 
 
   gateway:
@@ -33,8 +39,11 @@ services:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_CONFIG_IMPORT=optional:configserver:http://config-server:8888
     depends_on:
       - eureka
+    networks:
+      - mynetwork
 
   student:
     build:
@@ -44,11 +53,14 @@ services:
       - "8090:8090"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_CONFIG_IMPORT=optional:configserver:http://config-server:8888
     depends_on:
       - eureka
       - config
       - activemq
       - students-database
+    networks:
+      - mynetwork
 
 
   course:
@@ -59,10 +71,13 @@ services:
       - "9090:9090"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_CONFIG_IMPORT=optional:configserver:http://config-server:8888
     depends_on:
       - eureka
       - config
       - courses-database
+    networks:
+      - mynetwork
 
   aws:
     build:
@@ -72,6 +87,7 @@ services:
       - "8081:8081"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
+      - SPRING_CONFIG_IMPORT=optional:configserver:http://config-server:8888
       - AWS_ACCESS_KEY=xxx
       - AWS_SECRET_KEY=xxx
       - AWS_REGION=us-east-1
@@ -79,16 +95,25 @@ services:
       - eureka
       - activemq
       - config
+    networks:
+      - mynetwork
 
 
   students-database:
     image: mysql:8.0
     container_name: students-database
     ports:
-      - "3307:3306"
+      - "3309:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: studentDb
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    networks:
+      - mynetwork
 
 
   courses-database:
@@ -99,6 +124,13 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: coursesDb
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+    networks:
+      - mynetwork
 
   activemq:
     image: rmohr/activemq
@@ -106,3 +138,5 @@ services:
     ports:
       - "61616:61616"
       - "8161:8161"
+    networks:
+      - mynetwork
