--- a/microservice-gateway/Dockerfile
+++ b/microservice-gateway/Dockerfile
@@ -5,7 +5,7 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copiar el archivo JAR generado
-COPY target/microservice-gateway.jar app.jar
+COPY target/microservice-gateway-0.0.1-SNAPSHOT.jar app.jar
 
 # Exponer el puerto del servicio
 EXPOSE 8080
